codegen-sdk-ast-generator/src/snapshots/codegen_sdk_ast_generator__visitor__tests__python.snap
---
source: codegen-sdk-ast-generator/src/visitor.rs
expression: "codegen_sdk_common::generator::format_code_string(&visitor.to_string()).unwrap()"
---
#[salsa::tracked]
pub struct Class<'db> {
    #[id]
    node_id: indextree::NodeId,
    #[tracked]
    #[return_ref]
    pub node: crate::cst::ClassDefinition<'db>,
    pub name: crate::cst::Identifier<'db>,
}
#[salsa::tracked]
pub struct Constant<'db> {
    #[id]
    node_id: indextree::NodeId,
    #[tracked]
    #[return_ref]
    pub node: crate::cst::Module<'db>,
    pub name: crate::cst::Identifier<'db>,
}
#[salsa::tracked]
pub struct Function<'db> {
    #[id]
    node_id: indextree::NodeId,
    #[tracked]
    #[return_ref]
    pub node: crate::cst::FunctionDefinition<'db>,
    pub name: crate::cst::Identifier<'db>,
}
#[salsa::tracked]
pub struct Import<'db> {
    #[id]
    node_id: indextree::NodeId,
    #[tracked]
    #[return_ref]
    pub node: crate::cst::ImportFromStatement<'db>,
    pub module: crate::cst::DottedName<'db>,
    pub name: crate::cst::DottedName<'db>,
}
#[derive(Debug, Clone, PartialEq, Eq, Hash, salsa::Update)]
pub enum Symbol<'db> {
    Class(Class<'db>),
    Constant(Constant<'db>),
    Function(Function<'db>),
    Import(Import<'db>),
}
#[salsa::tracked]
pub struct Definitions<'db> {
    #[return_ref]
    pub classes: BTreeMap<String, Vec<Class<'db>>>,
    #[return_ref]
    pub constants: BTreeMap<String, Vec<Constant<'db>>>,
    #[return_ref]
    pub functions: BTreeMap<String, Vec<Function<'db>>>,
    #[return_ref]
    pub imports: BTreeMap<String, Vec<Import<'db>>>,
}
impl<'db> Definitions<'db> {
    pub fn visit(
        db: &'db dyn salsa::Database,
        root: &'db crate::cst::Parsed<'db>,
    ) -> Self {
        let mut classes: BTreeMap<String, Vec<Class<'db>>> = BTreeMap::new();
        let mut constants: BTreeMap<String, Vec<Constant<'db>>> = BTreeMap::new();
        let mut functions: BTreeMap<String, Vec<Function<'db>>> = BTreeMap::new();
        let mut imports: BTreeMap<String, Vec<Import<'db>>> = BTreeMap::new();
        let tree = root.tree(db);
        for (node, id) in tree.descendants(&root.program(db)) {
            match node {
                crate::cst::NodeTypes::ClassDefinition(node) => {
                    ///Code for query: (class_definition   name: (identifier) @name) @definition.class
                    ///Code for field: name: (identifier) @name
                    let name = node.name(tree);
                    let symbol = Class::new(db, id, node.clone(), name.clone());
                    classes.entry(name.source()).or_default().push(symbol);
                }
                crate::cst::NodeTypes::FunctionDefinition(node) => {
                    ///Code for query: (function_definition   name: (identifier) @name) @definition.function
                    ///Code for field: name: (identifier) @name
                    let name = node.name(tree);
                    let symbol = Function::new(db, id, node.clone(), name.clone());
                    functions.entry(name.source()).or_default().push(symbol);
                }
                crate::cst::NodeTypes::ImportFromStatement(node) => {
                    ///Code for query: (import_from_statement module_name: (dotted_name) @module name: (dotted_name) @name) @definition.import
                    ///Code for field: name: (dotted_name) @name
                    for name in node.name(tree) {
                        if let crate::cst::ImportFromStatementNameRef::DottedName(
                            name,
                        ) = name {
                            ///Code for field: module_name: (dotted_name) @module
                            let module_name = node.module_name(tree);
                            if let crate::cst::ImportFromStatementModuleNameRef::DottedName(
                                module_name,
                            ) = module_name {
                                let symbol = Import::new(
                                    db,
                                    id,
                                    node.clone(),
                                    module_name.clone(),
                                    name.clone(),
                                );
                                imports.entry(name.source()).or_default().push(symbol);
                            }
                        }
                    }
                }
                crate::cst::NodeTypes::Module(node) => {
                    ///Code for query: (module (expression_statement (assignment left: (identifier) @name) @definition.constant))
                    for child in node.children(tree) {
                        if let crate::cst::ModuleChildrenRef::ExpressionStatement(
                            child,
                        ) = child {
                            ///Code for query: (module (expression_statement (assignment left: (identifier) @name) @definition.constant))
                            for child in child.children(tree) {
                                if let crate::cst::ExpressionStatementChildrenRef::Assignment(
                                    child,
                                ) = child {
                                    ///Code for query: (module (expression_statement (assignment left: (identifier) @name) @definition.constant))
                                    ///Code for field: left: (identifier) @name
                                    let left = child.left(tree);
                                    if let crate::cst::AssignmentLeftRef::Identifier(left) = left {
                                        let symbol = Constant::new(
                                            db,
                                            id,
                                            node.clone(),
                                            left.clone(),
                                        );
                                        constants.entry(left.source()).or_default().push(symbol);
                                    }
                                }
                                break;
                            }
                        }
                        break;
                    }
                }
                _ => {}
            }
        }
        Self::new(db, classes, constants, functions, imports)
    }
    pub fn default(db: &'db dyn salsa::Database) -> Self {
        let mut classes: BTreeMap<String, Vec<Class<'db>>> = BTreeMap::new();
        let mut constants: BTreeMap<String, Vec<Constant<'db>>> = BTreeMap::new();
        let mut functions: BTreeMap<String, Vec<Function<'db>>> = BTreeMap::new();
        let mut imports: BTreeMap<String, Vec<Import<'db>>> = BTreeMap::new();
        Self::new(db, classes, constants, functions, imports)
    }
}
